--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10264,10 +10264,9 @@ a.text-gray-dark:hover {
 
 body,
 html {
-  height: 100%;
+  background-image: url("/img/login_background.jpg");
   background-repeat: no-repeat;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#6891a2), to(#0c6121));
-  background-image: linear-gradient(#6891a2, #0c6121);
+  background-position: center;
 }
 
 .card-container.card {
@@ -10299,11 +10298,13 @@ html {
   border-radius: 2px;
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  opacity: 0.9;
+  border-radius: 10px;
 }
 
 .profile-img-card {
-  width: 96px;
-  height: 96px;
+  width: 255px;
+  height: 255px;
   margin: 0 auto 10px;
   display: block;
   border-radius: 50%;
