--- a/resources/assets/sass/login.scss
+++ b/resources/assets/sass/login.scss
@@ -11,9 +11,9 @@
  * General styles
  */
 body, html {
-  height: 100%;
+  background-image: url("/img/login_background.jpg");
   background-repeat: no-repeat;
-  background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+  background-position: center;
 }
 
 .card-container.card {
@@ -46,11 +46,14 @@ body, html {
   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  opacity: 0.9;
+
+  border-radius: 10px;
 }
 
 .profile-img-card {
-  width: 96px;
-  height: 96px;
+  width: 255px;
+  height: 255px;
   margin: 0 auto 10px;
   display: block;
   -moz-border-radius: 50%;
