--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13374,6 +13374,10 @@ h1 {
   border-radius: 0;
 }
 
+.sidebar .nav-link:hover {
+  background-color: rgba(2, 117, 216, 0.49);
+}
+
 /*
  * Dashboard
  */
@@ -13480,5 +13484,12 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.bg-inverse {
+  background-image: url("/img/nav_background.jpg") !important;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
