--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -66,7 +66,13 @@ h1 {
 
 .sidebar .nav-link {
   border-radius: 0;
-}
+
+  &:hover {
+    background-color: rgba(2, 117, 216, 0.49);
+  }
+  }
+
+
 
 /*
  * Dashboard
@@ -171,4 +177,11 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.bg-inverse {
+  background-image: url("/img/nav_background.jpg") !important;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
