--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,8 +3,8 @@
 
 // Bootstrap
 @import "~bootstrap/dist/css/bootstrap";
-
 @import "~font-awesome/scss/font-awesome";
+@import "~select2/src/scss/core";
 
 .avatar {
   border-radius: 35px;
@@ -184,4 +184,9 @@ h1 {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+}
+
+
+.add-corporation {
+  width:100%;
 }
