--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,12 +3,16 @@
 
 // Bootstrap
 @import "~bootstrap/dist/css/bootstrap";
+@import "../css/charming/css/bootstrap4-charming.css";
 @import "~font-awesome/scss/font-awesome";
 @import "~select2/src/scss/core";
 
 .avatar {
   border-radius: 35px;
   float: left;
+
+  width:50px;
+  height:50px;
 }
 
 /*
