--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -111,6 +111,14 @@ body {
   height:50px;
 }
 
+.avatar-profile {
+  border-radius: 35px;
+  float: left;
+
+  width:25px;
+  height:25px;
+}
+
 .add-corporation {
   width:100%;
 }
