--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -123,3 +123,26 @@ body {
 .add-corporation {
   width:100%;
 }
+
+.profile-image {
+  position: relative;
+  text-align: center;
+}
+
+.profile-overlay {
+  position: absolute;
+  bottom: 0px;
+
+  height:30px;
+
+  width: 100%;
+  background-color: black;
+  opacity: 0.8;
+}
+
+.profile-overlay-text {
+  letter-spacing: 10px;
+  font-size: 20px;
+  font-weight: bold;
+
+}
