--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,7 +7,8 @@
 //@import "../css/charming/css/bootstrap4-charming.css";
 @import "~font-awesome/scss/font-awesome";
 @import "~select2/src/scss/core";
-
+//@import "~datatables.net-bs4/css/dataTables.bootstrap4";
+@import "~datatables/media/css/jquery.dataTables";
 
 body {
   font-size: .875rem;
