--- a/resources/assets/sass/_icons.scss
+++ b/resources/assets/sass/_icons.scss
@@ -1,4 +1,6 @@
-
+@import "~@fortawesome/fontawesome-free-webfonts/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-solid";
+@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-brands";
 
 .asgard-icon {
   display: inline-block;
