--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,7 @@
 @import "~bootstrap/dist/css/bootstrap";
 @import "~select2/src/scss/core";
 @import "~datatables/media/css/jquery.dataTables";
+@import "~jquery-ui-dist/jquery-ui";
 
 body {
   font-size: .875rem;
