--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17021,3 +17021,16 @@ body {
   text-align: center;
 }
 
+.grip {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+.btn-group-xs > .btn,
+.btn-xs {
+  padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+}
+
