--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -158,3 +158,14 @@ body {
   letter-spacing: 10px;
   text-align: center;
 }
+
+.grip {
+  cursor: grabbing;
+}
+
+.btn-group-xs > .btn, .btn-xs {
+  padding  : .25rem .4rem;
+  font-size  : .875rem;
+  line-height  : .5;
+  border-radius : .2rem;
+}
