--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,4 @@
-/*!
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);/*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10006,14 +10006,15 @@ a.text-dark:focus {
 
 body,
 html {
-  background-image: url("/img/login_background.jpg");
+  background-image: url("/img/background.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 .card-container.card {
   max-width: 350px;
-  padding: 40px 40px;
+  padding: 20px 20px;
 }
 
 .btn {
@@ -10040,7 +10041,6 @@ html {
   border-radius: 2px;
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  opacity: 0.9;
   border-radius: 10px;
 }
 
@@ -10122,7 +10122,7 @@ html {
 .btn.btn-signin:hover,
 .btn.btn-signin:active,
 .btn.btn-signin:focus {
-  background-color: #0c6121;
+  background-color: #527685;
 }
 
 .forgot-password {
@@ -10132,6 +10132,41 @@ html {
 .forgot-password:hover,
 .forgot-password:active,
 .forgot-password:focus {
-  color: #0c6121;
+  color: #3f5a65;
+}
+
+.hero {
+  font-weight: 100 !important;
+  font-size: 5em;
+  -ms-flex-item-align: center;
+      align-self: center;
+  color: #f3f3f3;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.auth {
+  font-weight: 300 !important;
+  font-size: 0.4em;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin: 0;
+}
+
+.logo-container {
+  margin-top: 50px;
 }
 
