--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10008,40 +10008,15 @@ body,
 html {
   background-image: url("/img/background.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
-.card-container.card {
-  max-width: 350px;
-  padding: 20px 20px;
-}
-
-.btn {
-  font-weight: 700;
-  height: 36px;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-      user-select: none;
-  cursor: default;
-}
-
-/*
- * Card component
- */
-
-.card {
-  background-color: #F7F7F7;
-  /* just in case there no content*/
-  padding: 20px 25px 30px;
-  margin: 0 auto 25px;
+.card-container {
   margin-top: 50px;
-  /* shadows and rounded borders */
-  border-radius: 2px;
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
 }
 
 .profile-img-card {
@@ -10050,89 +10025,6 @@ html {
   margin: 0 auto 10px;
   display: block;
   border-radius: 50%;
-}
-
-/*
- * Form styles
- */
-
-.profile-name-card {
-  font-size: 16px;
-  font-weight: bold;
-  text-align: center;
-  margin: 10px 0 0;
-  min-height: 1em;
-}
-
-.reauth-email {
-  display: block;
-  color: #404040;
-  line-height: 2;
-  margin-bottom: 10px;
-  font-size: 14px;
-  text-align: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.form-signin #inputEmail,
-.form-signin #inputPassword {
-  direction: ltr;
-  height: 44px;
-  font-size: 16px;
-}
-
-.form-signin input[type=email],
-.form-signin input[type=password],
-.form-signin input[type=text],
-.form-signin button {
-  width: 100%;
-  display: block;
-  margin-bottom: 10px;
-  z-index: 1;
-  position: relative;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.form-signin .form-control:focus {
-  border-color: #6891a2;
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #6891a2;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #6891a2;
-}
-
-.btn.btn-signin {
-  /*background-color: #4d90fe; */
-  background-color: #6891a2;
-  /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
-  padding: 0px;
-  font-weight: 700;
-  font-size: 14px;
-  height: 36px;
-  border-radius: 3px;
-  border: none;
-  -webkit-transition: all 0.218s;
-  transition: all 0.218s;
-}
-
-.btn.btn-signin:hover,
-.btn.btn-signin:active,
-.btn.btn-signin:focus {
-  background-color: #527685;
-}
-
-.forgot-password {
-  color: #6891a2;
-}
-
-.forgot-password:hover,
-.forgot-password:active,
-.forgot-password:focus {
-  color: #3f5a65;
 }
 
 .hero {
@@ -10167,6 +10059,6 @@ html {
 }
 
 .logo-container {
-  margin-top: 50px;
+  padding-top: 100px;
 }
 
