--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17713,7 +17713,7 @@ body {
   font-weight: bold;
 }
 
-#mail-table tbody tr:hover {
+.data-table-clickable tbody tr:hover {
   cursor: pointer;
 }
 
